// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Title component will render correctly with subtitle 1`] = `
"<section class="flex-none h-30 pt-2 pb-7 font-title text-blue-950">
  <p class="text-6xl mb-6">Test Title</p>
  <p class="text-2xl">Test Subtitle</p>
</section>"
`;

exports[`Page Title component will render correctly without subtitle 1`] = `
"<section class="flex-none h-30 pt-2 pb-7 font-title text-blue-950">
  <p class="text-6xl mb-6">Test Title</p>
  <!--v-if-->
</section>"
`;
